Alarm ready with code, buzzer, timer, and detector

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,5 +11,5 @@
 [env:ATmega328P]
 platform = atmelavr
 board = ATmega328P
-lib_extra_dirs = C:\Users\mendi\OneDrive\Documents\KDG\Embedded\libraries
+lib_extra_dirs = ..\libraries
 
